--- a/index.html
+++ b/index.html
@@ -246,7 +246,8 @@ var runNix = function() {
         <div id="contentText">If you can see this, questions.json wasn't loaded properly!</div>
       </div>
     </div>
-    <div id="footer"> </div>
+    <div id="footerFG"> </div>
+    <div id="footerBG"><img src="footerBG.jpg" width="100%" height="100%"/></div>
   </div>
   <script type="text/javascript">
 var input = document.getElementById('input');
