--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@ var reset_question = function() {
 var markdown2html = function() {
   var text = editor.getValue();
   contentText.innerHTML = markdown.toHTML(text);
-  return text.split('\n').join('\\n').replace("\"", "\\\"")
+  return JSON.stringify(text);
+    //.split('\n').join('\\n').replace("\"", "\\\"")
     ///replace(/(?:\r\n|\r|\n)/g,'\n') 
 }
 var load_markdown = function() {
@@ -246,9 +247,9 @@ var runNix = function() {
         <div id="contentText">If you can see this, questions.json wasn't loaded properly!</div>
       </div>
     </div>
-    <div id="footerFG"> </div>
-    <div id="footerBG"><img src="footerBG.jpg" width="100%" height="100%"/></div>
   </div>
+  <div id="footerFG"> </div>
+  <div id="footerBG"><img src="footerBG.jpg" width="100%" height="100%"/></div>
   <script type="text/javascript">
 var input = document.getElementById('input');
 var editor = CodeMirror.fromTextArea(input, {
