--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ var saveQuestions = function() {
   var t = questions;
   for (i = 0; i < t.questions.length; i++) {
     delete t.questions[i].mycode;
+    delete t.questions[i].result;
   }
   var questionsJSON = JSON.stringify(t, null, 4)
   var blob = new Blob([questionsJSON], {type: "text/plain;charset=utf-8"});
