mobile style sheet

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <link rel="stylesheet" href="codemirror-5.5/lib/codemirror.css">
   <link rel="stylesheet" href="style.css" type="text/css"/>
+  <link rel="stylesheet" href="style_mobile.css" type="text/css"/>
   <link rel="stylesheet" href="font/font.css" type="text/css"/>
   <script type="text/javascript" src="codemirror-5.5/lib/codemirror.js"></script>
   <script type="text/javascript" charset="utf-8">
