--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <link rel="stylesheet" href="codemirror-5.5/lib/codemirror.css">
   <link rel="stylesheet" href="style.css" type="text/css"/>
-  <link rel="stylesheet" href="style_mobile.css" type="text/css"/>
+  <link id ="styleMobile" rel="stylesheet" href="style_mobile.css" type="text/css"/>
   <link rel="stylesheet" href="font/font.css" type="text/css"/>
   <script type="text/javascript" src="codemirror-5.5/lib/codemirror.js"></script>
   <script type="text/javascript" charset="utf-8">
@@ -173,8 +173,8 @@ var change_question = function(myinput) {
 };
 
 flipStylesheet = function() {
-  document.getElementsByTagName('link')[2].disabled = !document.getElementsByTagName('link')[2].disabled;
-}
+    document.getElementById("styleMobile").disabled = !document.getElementById("styleMobile").disabled;
+  }
 
 var showSolution = function() {
   var s = document.getElementById('solution');
