--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@ loadJSON('questions.json',
 var change_question = function(myinput) {
   // save old state
   var output = document.getElementById('output');
+  output.style.backgroundColor = "grey";
+
   if (initialized) {
     questions.questions[current_question].mycode = editor.getValue();
     questions.questions[current_question].result = output.value;
@@ -206,15 +208,49 @@ var load_markdown = function() {
   editor.setValue(text.split('\\n').join('\n').replace("\\\"", "\""))
 }
 var runNix = function() {
+  // run the solution
+  
+  var correct_solution;
+  
+  Module['print'] = function(text) {
+    Module['return'] = text + '\n'; 
+    correct_solution = text;
+  };
+  Module['printErr'] = function(text) {
+  //this should not happen
+  //TODO exception handling
+  };
+  var solution_text = questions.questions[current_question].solution;
+  FS.writeFile('/test.nix', solution_text, {encoding: 'utf8'});
+  Module['arguments'] = ['-I', 'nixpkgs=nixpkgs', '--eval', '--strict', '--show-trace', '/test.nix'];
+  //var result = FS.readFile('test.nix', {encoding: 'utf8'});
+  //console.log(result);
+  Module.callMain(Module['arguments']);
+  
+  
+  
+  //run the user input
   console.log("running runNix()");
   document.getElementById('runInfo').innerHTML = "computation in progress";
   document.getElementById('output').value = "";
   Module['print'] = function(text) {
     Module['return'] = text + '\n'; 
-    var o = document.getElementById('output')
+    var o = document.getElementById('output');
+    if (text == correct_solution){
+    //  o.value += <font color="#00FF00"> + text + </font>;
+      console.log("correct answer");
       o.value += text;
-    auto_resize(o)
-      document.getElementById('runInfo').innerHTML = "";
+      o.style.backgroundColor = "#44aa44";
+      setTimeout(function () {o.style.backgroundColor = "grey"}, 2000);
+    }else{
+      console.log("incorrect answer");
+      o.value += text;
+      o.style.backgroundColor = "#aa4444";
+      setTimeout(function () {o.style.backgroundColor = "grey"}, 2000);
+    }
+    auto_resize(o);
+    document.getElementById('runInfo').innerHTML = "";
+        
   };
   Module['printErr'] = function(text) {
     text = text.replace("[31;1m", "");
@@ -233,13 +269,18 @@ var runNix = function() {
     var o = document.getElementById('output')
       o.value += text;
     auto_resize(o)
+    
+    console.log("incorrect answer");
+    o.value += text;
+    o.style.backgroundColor = "#aa4444";
+    setTimeout(function () {o.style.backgroundColor = "grey"}, 2000);
   };
   var input_text = editor.getValue();
   FS.writeFile('/test.nix', input_text, {encoding: 'utf8'});
   Module['arguments'] = ['-I', 'nixpkgs=nixpkgs', '--eval', '--strict', '--show-trace', '/test.nix'];
   //var result = FS.readFile('test.nix', {encoding: 'utf8'});
   //console.log(result);
-  Module.callMain(Module['arguments'])
+  Module.callMain(Module['arguments']);
 };   	    
 
   </script>
