shell as syntax highlighting

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link id ="styleMobile" rel="stylesheet" href="style_mobile.css" type="text/css"/>
   <link rel="stylesheet" href="font/font.css" type="text/css"/>
   <script type="text/javascript" src="codemirror-5.5/lib/codemirror.js"></script>
-  <script type="text/javascript" src="codemirror-5.5/mode/haskell/haskell.js"></script>
+  <script type="text/javascript" src="codemirror-5.5/mode/shell/shell.js"></script>
 
   <script type="text/javascript" charset="utf-8">
 
