also added favico.ico to html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr" >
 <head>
   <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8"/>
+  <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+
   <!--[if IE]>
   <meta HTTP-EQUIV="REFRESH" content="0; url=https://www.mozilla.org/en-US/firefox/new/">
   <![endif]-->
